# C_Cpp_CMake_Examples

./: README.md
Projs_Basic/2_WithHeaders/: CMakeLists.txt
docs/: note_duringLear.txt
